--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "LastFM Statistics Retriever",
   "main": "index.js",
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.0",
     "autoprefixer": "^10.4.7",
     "daisyui": "^2.15.0",
     "postcss": "^8.4.14",
